--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -8,6 +8,15 @@ body {
     background-color: #d3d3d3;
     font-family: Arial, sans-serif;
 }
+.phonepong {
+    width: 284px;
+    height: 570px;
+    background-color: transparent;
+    border-radius: 32px;
+    border: 8px solid black;
+    position: relative;
+    overflow: hidden;
+}
 .phonepoznamky {
     width: 7.5cm;
     height: 570px;
@@ -15,12 +24,45 @@ body {
     border-radius: 32px;
     border: 8px solid black;
     position: relative;
-    overflow: hidden;
+   
 }
 .phone {width: 7.5cm;
     height: 15cm;
     background-color: #333;
     background-image: url('obrazky/pozadi_telefonu_2.png');
+    background-size: cover; 
+    background-position: center; 
+    border-radius: 30px;
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    position: relative;
+    color: #fff;
+    justify-content: space-between;
+    border: 8px solid black;
+
+}
+.phonemobilnibanka {
+    width: 7.5cm;
+    height: 15cm;
+    background-color: black;
+    border-radius: 30px;
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    position: relative;
+    border: 8px solid black;
+    
+    background-color: white;
+}
+.phonekalkulacka {width: 7.5cm;
+    height: 15cm;
+    background-color: #ffffff;
+    
     background-size: cover; 
     background-position: center; 
     border-radius: 30px;
@@ -62,7 +104,15 @@ body {
     justify-content: space-between;
     border: 8px solid black;
 }
-
+.phonechrome {
+    width: 7.5cm;
+    height: 15cm;
+    background-color: #fff;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border: 8px solid black;
+    position: relative;
+}
 .notch {
     width: 120px;
     height: 30px;
@@ -387,4 +437,100 @@ body {
     font-size: 1.1em;
     padding: 20px;
     color: #666;
+}
+.header {
+    font-size: 1.5em;
+    text-align: center;
+    padding: 10px;
+    color: #333;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+    margin-top: 30px;
+}
+.note {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    border-bottom: 1px solid #ddd;
+    font-size: 1.2em;
+    background-color: #fff;
+}
+.note:hover {
+    background-color: #f0f0f0;
+}
+.delete-icon {
+    cursor: pointer;
+    font-size: 1.2em;
+    color: red;
+}
+.add-note-bar {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    padding: 5px;
+    box-sizing: border-box;
+    background-color: #f5f5f5;
+    border-top: 1px solid #ddd;
+    align-items: center;
+}
+.add-note-bar input {
+    flex: 1;
+    padding: 8px;
+    font-size: 1em;
+}
+.add-note-bar img {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.login-container {
+    text-align: center;
+    margin-top: 80px;
+}
+.login-container h1 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: black;
+}
+.login-container input {
+    width: 80%;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: #f2f2f2;
+    color: black;
+    text-align: center;
+}
+.login-container button {
+    width: 85%;
+    padding: 15px;
+    font-size: 1.2rem;
+    background-color: #ff0040;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+.bottom-icons-banka {
+    display: flex;
+    justify-content: space-around;
+    width: 90%;
+    padding: 15px 0;
+    position: absolute;
+    bottom: 30px;
+    color: black;
+    background-color: #3a3939da;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+.bottom-icons-banka div {
+    text-align: center;
 }
