--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -10,12 +10,13 @@ body {
 }
 .phonedino {
     width: 7.5cm;
-    height: 570px;
+    height: 15cm;
     background-color: #fff;
     border-radius: 32px;
     border: 8px solid black;
     position: relative;
     overflow: hidden;
+    padding: 2px;
 }
 .phonepong {
     width: 7.5cm;
@@ -38,22 +39,22 @@ body {
 }
 .phonefotky {
     width: 7.5cm;
-    height: 570px;
+    height: 15cm;
     background-color: #fff;
     border-radius: 32px;
     border: 8px solid black;
     position: relative;
-   
+    padding: 2px;
    
 }
 .phonepoznamky {
     width: 7.5cm;
-    height: 570px;
+    height: 15cm;
     background-color: #fff;
     border-radius: 32px;
     border: 8px solid black;
     position: relative;
-   
+    padding: 2px;
    
 }
 .phone {width: 7.5cm;
@@ -113,15 +114,35 @@ body {
     height: 15cm;
     background-color: #fff;
     border-radius: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     border: 8px solid black;
     position: relative;
+    justify-content: space-between;
+    padding: 2px;
 }
 .phonemain {
     width: 7.5cm;
     height: 15cm;
     background-color: #333;
     background-image: url('obrazky/pozadi_telefonu_2.png');
+    background-size: cover; 
+    background-position: center; 
+    border-radius: 30px;
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    position: relative;
+    color: #fff;
+    justify-content: space-between;
+    border: 8px solid black;
+}
+.phonefotak {
+    width: 7.5cm;
+    height: 15cm;
+    background-color: #2a2424;
+
     background-size: cover; 
     background-position: center; 
     border-radius: 30px;
@@ -143,6 +164,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border: 8px solid black;
     position: relative;
+    padding: 2px;
 }
 .notch {
     width: 120px;
@@ -164,6 +186,18 @@ body {
     height: 0.2cm;
     background-color: #665;
     border-radius: 60%;
+}
+.status-bar-nastaveni {
+    width: 100%;
+    position: absolute;
+    top: 15px; /* Udrží ho nahoře */
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.4cm;
+    padding: 3px 10px;
+    color: #000000;
 }
 .status-bar {
     width: 100%;
@@ -323,10 +357,10 @@ body {
     margin: 0;
     padding: 0;
     background-image: url('obrazky/flappy-bird-backgrounds-flappy-bird.jpg'); background-size: cover;
-    border-radius: 10px;
-    height: 750px;
-    width: 284px;
-    border-radius: 5%;
+   
+    height: 790px;
+    width: 288px;
+    border-radius: 25px;
     
 }
 .game-over {
@@ -472,7 +506,7 @@ body {
 .header {
     font-size: 1.5em;
     text-align: center;
-    padding: 10px;
+    padding: 8px;
     color: #333;
     border-bottom: 1px solid #ccc;
     position: relative;
