--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('obrazky/stul.jpg');
+    background-image: url('obrazky/vecteezy_ai-generated-sky-with-abstract-lines-background_42197330.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
