--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -814,3 +814,49 @@ body {
     border-radius: 8px;
     cursor: pointer;
 }
+.top-bar {
+    height: 40px;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    font-size: 14px;
+    width: 90%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#camera-container {
+    position: absolute;
+    width: 100%;
+    height: 79%;
+    top: 7%;
+    left: 0px;
+    overflow: hidden;
+   
+}
+#camera-feed {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.bottom-bar {
+    height: 80px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.shutter-button {
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border-radius: 50%;
+    border: 4px solid gray;
+}
