--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -79,6 +79,21 @@ body {
     justify-content: space-between;
     border: 8px solid black;
 
+}.phonetoneboto {
+    background-image: url('obrazky/bile_pozadi.png');
+    width: 7.5cm;
+    height: 15cm;
+    background-color: black;
+    border-radius: 30px;
+    padding: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    position: relative;
+    border: 8px solid black;
+   
+    background-color: white;
 }
 .phonemobilnibanka {
     width: 7.5cm;
