--- a/styly_celkove.css
+++ b/styly_celkove.css
@@ -1179,3 +1179,49 @@ body {
     0% { transform: rotateY(0deg); }
     100% { transform: rotateY(1080deg); }
 }
+.coin-wrapper {
+    width: 200px;
+    height: 200px;
+    perspective: 1000px;
+    cursor: pointer;
+    position: relative;
+}
+
+.coin-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+}
+
+.coin-face {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.coin-face img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.front {
+    transform: rotateY(0deg);
+}
+
+.back {
+    transform: rotateY(180deg);
+}
+
+.result-text {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    text-align: center;
+}
